@@ -393,6 +393,52 @@ void MacroCommand::setAccel(int i)
     _pcAction->setAccel(iAccel);
 }
 
+void MacroCommand::load()
+{
+  FCParameterGrp::handle hGrp = App::GetApplication().GetParameterGroupByPath("User parameter:BaseApp/Macro");
+
+  if (hGrp->HasGroup("Macros"))
+  {
+    hGrp = hGrp->GetGroup("Macros");
+    std::vector<FCHandle<FCParameterGrp> > macros = hGrp->GetGroups();
+    for (std::vector<FCHandle<FCParameterGrp> >::iterator it = macros.begin(); it!=macros.end(); ++it )
+    {
+      MacroCommand* macro = new MacroCommand((*it)->GetGroupName());
+      macro->setScriptName  ( (*it)->GetASCII( "Script"     ).c_str() );
+      macro->setMenuText    ( (*it)->GetASCII( "Menu"       ).c_str() );
+      macro->setToolTipText ( (*it)->GetASCII( "Tooltip"    ).c_str() );
+      macro->setWhatsThis   ( (*it)->GetASCII( "WhatsThis"  ).c_str() );
+      macro->setStatusTip   ( (*it)->GetASCII( "Statustip"  ).c_str() );
+      if ((*it)->GetASCII("Pixmap", "nix") != "nix") 
+        macro->setPixmap    ( (*it)->GetASCII( "Pixmap"     ).c_str() );
+      macro->setAccel       ( (*it)->GetInt  ( "Accel",0    )         );
+      ApplicationWindow::Instance->commandManager().addCommand( macro );
+    }
+  }
+}
+
+void MacroCommand::save()
+{
+  std::vector<Command*> macros = ApplicationWindow::Instance->commandManager().getGroupCommands("Macros");
+  if ( macros.size() > 0 )
+  {
+    FCParameterGrp::handle hGrp = App::GetApplication().GetParameterGroupByPath("User parameter:BaseApp/Macro")->GetGroup("Macros");
+
+    for (std::vector<Command*>::iterator it = macros.begin(); it!=macros.end(); ++it )
+    {
+      MacroCommand* macro = (MacroCommand*)(*it);
+      FCParameterGrp::handle hMacro = hGrp->GetGroup(macro->getName());
+      hMacro->SetASCII( "Script",    macro->getScriptName () );
+      hMacro->SetASCII( "Menu",      macro->getMenuText   () );
+      hMacro->SetASCII( "Tooltip",   macro->getToolTipText() );
+      hMacro->SetASCII( "WhatsThis", macro->getWhatsThis  () );
+      hMacro->SetASCII( "Statustip", macro->getStatusTip  () );
+      hMacro->SetASCII( "Pixmap",    macro->getPixmap     () );
+      hMacro->SetInt  ( "Accel",     macro->getAccel      () );
+    }
+  }
+}
+
 //===========================================================================
 // FCPythonCommand
 //===========================================================================
